Bustage fix - Bug 351949 – Automatic Update is not working for Vista users with limited account privilege and UAC (User Account Control) enabled